// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`qr parsers tests using parseQRCode should return a valid Recovery certificate 1`] = `
Right {
  "_tag": "Right",
  "value": Object {
    "dob": 1977-06-16T00:00:00.000Z,
    "nam": Object {
      "fn": "Di Caprio",
      "fnt": "DI<CAPRIO",
      "gn": "Marilù Teresa",
      "gnt": "MARILU<TERESA",
    },
    "r": Array [
      Object {
        "ci": "01ITA65E2BD36C9E4900B0273D2E7C92EEB9#1",
        "co": "IT",
        "df": 2021-05-04T00:00:00.000Z,
        "du": 2021-10-31T00:00:00.000Z,
        "fr": 2021-05-02T00:00:00.000Z,
        "is": "IT",
        "tg": "COVID-19",
      },
    ],
    "ver": "1.0.0",
  },
}
`;

exports[`qr parsers tests using parseQRCode should return a valid Test cert 1`] = `
Right {
  "_tag": "Right",
  "value": Object {
    "dob": 1977-06-16T00:00:00.000Z,
    "nam": Object {
      "fn": "Di Caprio",
      "fnt": "DI<CAPRIO",
      "gn": "Marilù Teresa",
      "gnt": "MARILU<TERESA",
    },
    "t": Array [
      Object {
        "ci": "01IT0BFC9866D3854EAC82C21654B6F6DE32#1",
        "co": "IT",
        "dr": 2021-05-11T12:27:15.000Z,
        "is": "IT",
        "ma": None {
          "_tag": "None",
        },
        "nm": "Roche LightCycler qPCR",
        "sc": 2021-05-10T10:27:15.000Z,
        "tc": "Policlinico Umberto I",
        "tg": "COVID-19",
        "tr": Object {
          "displays": Object {
            "en_GB": "Not detected",
            "it_IT": "Negativo",
          },
        },
        "tt": Object {
          "displays": Object {
            "en_GB": "Nucleic acid amplification with probe detection",
            "it_IT": "Test molecolare",
          },
        },
      },
    ],
    "ver": "1.0.0",
  },
}
`;

exports[`qr parsers tests using parseQRCode should return a valid Test certificate 1`] = `
Right {
  "_tag": "Right",
  "value": Object {
    "dob": 1977-06-16T00:00:00.000Z,
    "nam": Object {
      "fn": "Di Caprio",
      "fnt": "DI<CAPRIO",
      "gn": "Marilù Teresa",
      "gnt": "MARILU<TERESA",
    },
    "t": Array [
      Object {
        "ci": "01IT053059F7676042D9BEE9F874C4901F9B#3",
        "co": "IT",
        "dr": 2021-05-11T12:27:15.000Z,
        "is": "IT",
        "ma": Some {
          "_tag": "Some",
          "value": "Abbott Rapid Diagnostics, Panbio COVID-19 Ag Rapid Test",
        },
        "nm": "Roche LightCycler qPCR",
        "sc": 2021-05-03T10:27:15.000Z,
        "tc": "Policlinico Umberto I",
        "tg": "COVID-19",
        "tr": Object {
          "displays": Object {
            "en_GB": "Not detected",
            "it_IT": "Negativo",
          },
        },
        "tt": Object {
          "displays": Object {
            "en_GB": "Nucleic acid amplification with probe detection",
            "it_IT": "Test molecolare",
          },
        },
      },
    ],
    "ver": "1.0.0",
  },
}
`;

exports[`qr parsers tests using parseQRCode should return a valid Vaccination cartificate 1`] = `
Right {
  "_tag": "Right",
  "value": Object {
    "dob": 1977-06-16T00:00:00.000Z,
    "nam": Object {
      "fn": "Di Caprio",
      "fnt": "DI<CAPRIO",
      "gn": "Marilù Teresa",
      "gnt": "MARILU<TERESA",
    },
    "v": Array [
      Object {
        "ci": "01ITE7300E1AB2A84C719004F103DCB1F70A#6",
        "co": "IT",
        "dn": 2,
        "dt": 2021-04-10T00:00:00.000Z,
        "is": "IT",
        "ma": "Biontech Manufacturing GmbH",
        "mp": "Comirnaty",
        "sd": 2,
        "tg": "COVID-19",
        "vp": "SARS-CoV-2 mRNA vaccine",
      },
    ],
    "ver": "1.0.0",
  },
}
`;
